src/modules/navbar/navbar-item.component.scss
@import '../../scss/mixins';

.sky-navbar-item {
  display: inline-block;
  font-weight: 600;
  margin-right: $sky-margin-half;

  /deep/ {
    a,
    .sky-dropdown-button {
      border: none;
      color: $sky-nav-color;
      display: block;
      padding: 16px 12px;
      text-decoration: none;
    }

    .sky-dropdown-menu {
      background-color: $sky-nav-background-color;
    }

    .sky-dropdown-item {
      color: $sky-nav-color;
      display: block;
      font-size: 12px;
      font-weight: normal;
      margin: 0;

      &:hover {
        background-color: $sky-nav-selected-background-color;
        color: $sky-nav-selected-color;

        > /deep/ a,
        /deep/ .sky-dropdown-button {
          color: $sky-nav-selected-color;
        }
      }
    }
  }

  /deep/ > *:hover,
  /deep/ .sky-dropdown:hover .sky-dropdown-button,
  /deep/ .sky-navbar-item-active,
  &.sky-navbar-item-active /deep/ > *,
  &.sky-navbar-item-active /deep/ .sky-dropdown-button
  {
    background-color: $sky-nav-selected-background-color;
    color: $sky-nav-selected-color;
    @include sky-border(nav);
    padding-bottom: $sky-nav-item-padding - $sky-nav-selected-border-width;
  }
}

